# opencv_learning

./: .gitignore  CMakeLists.txt  README.md
src/: .#border.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  camera_calib.cpp  cmake_install.cmake  filter.cpp  gstream.cpp  hough.cpp  laplace.cpp  morph.cpp  opencv_gstream.cpp  pzfs.cpp  resize.cpp  sobel.cpp  tut1.cpp
src/src/: Makefile  cmake_install.cmake
